test/cts/negative/missing_workgroup_size.wesl
@compute
fn main(@builtin(global_invocation_id) gid: vec3<u32>) {
  let _ = gid.x;
}
